--- a/package.json
+++ b/package.json
@@ -9,17 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
+    "axios": "^1.5.1",
+    "cheerio": "^1.0.0-rc.12",
+    "follow-redirects": "^1.15.3",
+    "mongoose": "^7.5.3",
+    "next": "latest",
+    "nodemailer": "^6.9.5",
     "react": "latest",
     "react-dom": "latest",
-    "next": "latest"
+    "react-responsive-carousel": "^3.2.23",
+    "supports-color": "^9.4.0",
+    "vercel": "^32.3.1"
   },
   "devDependencies": {
-    "typescript": "latest",
-    "@types/react": "latest",
-    "@types/node": "latest",
-    "@types/react-dom": "latest",
-    "autoprefixer": "latest",
-    "postcss": "latest",
-    "tailwindcss": "latest"
+    "@types/cheerio": "^0.22.32",
+    "@types/node": "^20.8.0",
+    "@types/nodemailer": "^6.4.11",
+    "@types/react": "^18.2.24",
+    "@types/react-dom": "^18.2.8",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.2.2"
   }
 }
