--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
-    "functions": {
-      "api/cron": {
-        "maxDuration": 5 
-      }
+  "crons": [
+    {
+      "path": "/api/cron",
+      "schedule": "0 5 * * *"
     }
-  }
-  
+  ]
+}
